--- a/home_cluster/test/test-secret.yaml
+++ b/home_cluster/test/test-secret.yaml
@@ -4,6 +4,7 @@ metadata:
   name: mysecret
   annotations:
     avp.kubernetes.io/path: "secret/tools/docker_registry"
+    avp.kubernetes.io/kv-version: "1"
 type: Opaque
 stringData:
   TOKEN: <value>
