--- a/home_cluster/jenkins/jenkins.yaml
+++ b/home_cluster/jenkins/jenkins.yaml
@@ -156,6 +156,18 @@ data:
       gitHostKeyVerificationConfiguration:
         sshHostKeyVerificationStrategy: "noHostKeyVerificationStrategy"
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: vault-jenkins-token
+  namespace: jenkins
+  annotations:
+    avp.kubernetes.io/path: "secret/tools/jenkins/vault-token"
+    avp.kubernetes.io/kv-version: "1" # 2 is the latest revision in this example
+type: Opaque
+data:
+  token: <token>
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -171,14 +183,6 @@ spec:
     metadata:
       labels:
         app: jenkins
-      annotations:
-        vault.hashicorp.com/agent-inject: 'true'
-        vault.hashicorp.com/role: 'jenkins'
-        vault.hashicorp.com/agent-inject-secret-config: 'secret/tools/jenkins/vault-token'
-        vault.hashicorp.com/agent-inject-template-config: |
-          {{- with secret "secret/tools/jenkins/vault-token" -}}
-          export VAULT_TOKEN="{{.Data.token}}"
-          {{- end }}
     spec:
       securityContext:
         fsGroup: 472
@@ -213,6 +217,11 @@ spec:
           env:
             - name: JAVA_OPTS
               value: "-Djava.awt.headless=true -Djenkins.install.runSetupWizard=false"
+            - name: VAULT_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: vault-jenkins-token
+                  key: token
           command: ["sh", "-c"]
           args: ['export $(cat /vault/secrets/config | xargs) && env && "/usr/bin/tini" "--" "/usr/local/bin/jenkins.sh"']
           ports:
