--- a/home_cluster/github2telegram/github2telegram.yaml
+++ b/home_cluster/github2telegram/github2telegram.yaml
@@ -1,4 +1,17 @@
 apiVersion: v1
+kind: Secret
+metadata:
+  name: docker-token
+  namespace: default
+  annotations:
+    avp.kubernetes.io/path: "secret/tools/github2telegram-bot"
+    avp.kubernetes.io/kv-version: "1" # 2 is the latest revision in this example
+type: Opaque
+data:
+  ADMIN_USER: <ADMIN_USER>
+  BOT_TOKEN: <BOT_TOKEN>
+---
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: github2telegram-config
@@ -46,15 +59,15 @@ spec:
     metadata:
       labels:
         app: github2telegram
-      annotations:
-        vault.hashicorp.com/agent-inject: 'true'
-        vault.hashicorp.com/role: 'github2telegram'
-        vault.hashicorp.com/agent-inject-secret-config: 'secret/tools/github2telegram-bot'
-        vault.hashicorp.com/agent-inject-template-config: |
-          {{- with secret "secret/tools/github2telegram-bot" -}}
-          export ADMIN_USER="{{.Data.ADMIN_USER}}"
-          export BOT_TOKEN="{{.Data.BOT_TOKEN}}"
-          {{- end }}
+      # annotations:
+      #   vault.hashicorp.com/agent-inject: 'true'
+      #   vault.hashicorp.com/role: 'github2telegram'
+      #   vault.hashicorp.com/agent-inject-secret-config: 'secret/tools/github2telegram-bot'
+      #   vault.hashicorp.com/agent-inject-template-config: |
+      #     {{- with secret "secret/tools/github2telegram-bot" -}}
+      #     export ADMIN_USER="{{.Data.ADMIN_USER}}"
+      #     export BOT_TOKEN="{{.Data.BOT_TOKEN}}"
+      #     {{- end }}
     spec:
       terminationGracePeriodSeconds: 10
       securityContext:
@@ -69,7 +82,7 @@ spec:
           command:
             ['sh', '-c']
           args:
-            ['export $(cat /vault/secrets/config | xargs) && envsubst < config_template.yaml > config.yaml && /app/github2telegram']
+            ['envsubst < config_template.yaml > config.yaml && /app/github2telegram']
           resources:
             limits:
               memory: 512Mi
