--- a/home_cluster/github2telegram/github2telegram.yaml
+++ b/home_cluster/github2telegram/github2telegram.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: tools
   annotations:
     avp.kubernetes.io/path: "secret/tools/github2telegram-bot"
-    avp.kubernetes.io/kv-version: "1" # 2 is the latest revision in this example
+    avp.kubernetes.io/kv-version: "1"
 type: Opaque
 data:
   ADMIN_USER: <ADMIN_USER>
@@ -59,15 +59,6 @@ spec:
     metadata:
       labels:
         app: github2telegram
-      # annotations:
-      #   vault.hashicorp.com/agent-inject: 'true'
-      #   vault.hashicorp.com/role: 'github2telegram'
-      #   vault.hashicorp.com/agent-inject-secret-config: 'secret/tools/github2telegram-bot'
-      #   vault.hashicorp.com/agent-inject-template-config: |
-      #     {{- with secret "secret/tools/github2telegram-bot" -}}
-      #     export ADMIN_USER="{{.Data.ADMIN_USER}}"
-      #     export BOT_TOKEN="{{.Data.BOT_TOKEN}}"
-      #     {{- end }}
     spec:
       terminationGracePeriodSeconds: 10
       securityContext:
