--- a/home_cluster/jenkins/jenkins.yaml
+++ b/home_cluster/jenkins/jenkins.yaml
@@ -163,7 +163,7 @@ metadata:
   namespace: jenkins
   annotations:
     avp.kubernetes.io/path: "secret/tools/jenkins/vault-token"
-    avp.kubernetes.io/kv-version: "1" # 2 is the latest revision in this example
+    avp.kubernetes.io/kv-version: "1"
 type: Opaque
 data:
   token: <token>
