--- a/home_cluster/jenkins/jenkins.yaml
+++ b/home_cluster/jenkins/jenkins.yaml
@@ -239,14 +239,14 @@ spec:
           #   periodSeconds: 30
           #   successThreshold: 1
           #   timeoutSeconds: 2
-          # livenessProbe:
-          #   failureThreshold: 3
-          #   initialDelaySeconds: 30
-          #   periodSeconds: 10
-          #   successThreshold: 1
-          #   tcpSocket:
-          #     port: 3000
-          #   timeoutSeconds: 1
+          livenessProbe:
+            failureThreshold: 3
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            successThreshold: 1
+            tcpSocket:
+              port: jenkins-http
+            timeoutSeconds: 1
           resources:
             limits:
               memory: 2048Mi
