--- a/home_cluster/open-monitor/open-monitor.yaml
+++ b/home_cluster/open-monitor/open-monitor.yaml
@@ -59,14 +59,16 @@ spec:
           #   periodSeconds: 30
           #   successThreshold: 1
           #   timeoutSeconds: 2
-          # livenessProbe:
-          #   failureThreshold: 3
-          #   initialDelaySeconds: 30
-          #   periodSeconds: 10
-          #   successThreshold: 1
-          #   tcpSocket:
-          #     port: 3000
-          #   timeoutSeconds: 1
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: http-opmon
+              scheme: HTTP
+            initialDelaySeconds: 10
+            periodSeconds: 30
+            successThreshold: 1
+            timeoutSeconds: 2
           resources:
             limits:
               memory: 512Mi
