--- a/home_cluster/docker-registry/docker-registry.yaml
+++ b/home_cluster/docker-registry/docker-registry.yaml
@@ -282,5 +282,5 @@ metadata:
     avp.kubernetes.io/path: "secret/tools/docker_registry"
     avp.kubernetes.io/kv-version: "1"
 type: Opaque
-data:
+stringData:
   users: <users>
