change private registry cred to stringData

--- a/home_cluster/jenkins/private_registry_secret.yaml
+++ b/home_cluster/jenkins/private_registry_secret.yaml
@@ -6,6 +6,6 @@ metadata:
   annotations:
     avp.kubernetes.io/path: "secret/tools/docker_registry"
     avp.kubernetes.io/kv-version: "1"
-data:
+stringData:
   .dockerconfigjson: <dockerconfigjson>
 type: kubernetes.io/dockerconfigjson
