--- a/home_cluster/jenkins/jenkins.yaml
+++ b/home_cluster/jenkins/jenkins.yaml
@@ -191,7 +191,7 @@ spec:
       serviceAccountName: internal-app
       initContainers:
         - name: jenkins-install-plugin
-          image: jenkins/jenkins:2.426.1-lts-jdk17
+          image: jenkins/jenkins:2.426.2-lts
           imagePullPolicy: IfNotPresent
           command: ["jenkins-plugin-cli"]
           args: [
