--- a/home_cluster/jenkins/jenkins.yaml
+++ b/home_cluster/jenkins/jenkins.yaml
@@ -212,7 +212,7 @@ spec:
               name: jenkins-pv
       containers:
         - name: jenkins
-          image: jenkins/jenkins:2.426.1-lts-jdk17
+          image: jenkins/jenkins:2.426.2-lts
           imagePullPolicy: IfNotPresent
           env:
           - name: JAVA_OPTS
