--- a/home_cluster/jenkins/jenkins.yaml
+++ b/home_cluster/jenkins/jenkins.yaml
@@ -18,6 +18,7 @@ data:
           jenkinsUrl: "http://jenkins-http:8080"
           name: "Kubernetes"
           namespace: "jenkins"
+          serverUrl: "https://k8s-masters.home.local:6443"
           templates:
           - containers:
             - image: "docker-registry.local.geracorp.work/tools/jenkins-agent:v1.0.1"
@@ -191,7 +192,7 @@ spec:
       serviceAccountName: internal-app
       initContainers:
         - name: jenkins-install-plugin
-          image: jenkins/jenkins:2.426.2-lts
+          image: jenkins/jenkins:2.426.3-lts
           imagePullPolicy: IfNotPresent
           command: ["jenkins-plugin-cli"]
           args: [
@@ -212,7 +213,7 @@ spec:
               name: jenkins-pv
       containers:
         - name: jenkins
-          image: jenkins/jenkins:2.426.2-lts
+          image: jenkins/jenkins:2.426.3-lts
           imagePullPolicy: IfNotPresent
           env:
           - name: JAVA_OPTS
