--- a/home_cluster/jenkins/jenkins.yaml
+++ b/home_cluster/jenkins/jenkins.yaml
@@ -189,7 +189,7 @@ spec:
         fsGroup: 472
         supplementalGroups:
           - 0
-      serviceAccountName: internal-app
+      serviceAccountName: jenkins-admin
       initContainers:
         - name: jenkins-install-plugin
           image: jenkins/jenkins:2.426.3-lts
