change nod32update mirror image version to 01.02.2024

--- a/home_cluster/nod32update/nod32update.yaml
+++ b/home_cluster/nod32update/nod32update.yaml
@@ -23,7 +23,7 @@ spec:
           - 0
       containers:
         - name: nod32update
-          image: gerain/nod32update-mirror:latest
+          image: gerain/nod32update-mirror:01.02.2024
           imagePullPolicy: IfNotPresent
           command: ["sh", "-c"]
           args:
