--- a/home_cluster/elastic/elastic_kibana.yaml
+++ b/home_cluster/elastic/elastic_kibana.yaml
@@ -5,11 +5,22 @@ metadata:
   namespace: elasticsearch
 spec:
   version: 8.12.1
+  volumeClaimDeletePolicy: DeleteOnScaledownOnly
   nodeSets:
   - name: default
     count: 2
     config:
       node.store.allow_mmap: false
+    volumeClaimTemplates:
+    - metadata:
+        name: elasticsearch-data # Do not change this name unless you set up a volume mount for the data path.
+      spec:
+        accessModes:
+        - ReadWriteOnce
+        resources:
+          requests:
+            storage: 1Gi
+        storageClassName: nfs-client
 ---
 apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
