--- a/home_cluster/jenkins/secrets.yaml
+++ b/home_cluster/jenkins/secrets.yaml
@@ -9,3 +9,16 @@ metadata:
 stringData:
   .dockerconfigjson: <dockerconfigjson>
 type: kubernetes.io/dockerconfigjson
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: lldap-bind-cred
+  namespace: jenkins
+  annotations:
+    avp.kubernetes.io/path: "secret/tools/lldap"
+    avp.kubernetes.io/kv-version: "1"
+type: Opaque
+stringData:
+  user: <user>
+  password: <password>
