--- a/home_cluster/jenkins/jenkins.yaml
+++ b/home_cluster/jenkins/jenkins.yaml
@@ -201,7 +201,7 @@ spec:
           command: ["jenkins-plugin-cli"]
           args: [
             "--plugins",
-            "dark-theme ansicolor pipeline-stage-view timestamper blueocean configuration-as-code git github hashicorp-vault-plugin job-dsl uno-choice kubernetes ldap",
+            "dark-theme ansicolor pipeline-stage-view timestamper blueocean configuration-as-code git github hashicorp-vault-plugin job-dsl uno-choice kubernetes ldap matrix-auth",
             "--plugin-download-directory",
             "/var/jenkins_home/plugins/"
             ]
