some refactoring jenkins manifest

--- a/home_cluster/jenkins/secrets.yaml
+++ b/home_cluster/jenkins/secrets.yaml
@@ -22,3 +22,15 @@ type: Opaque
 stringData:
   user: <user>
   password: <password>
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: vault-jenkins-token
+  namespace: jenkins
+  annotations:
+    avp.kubernetes.io/path: "secret/tools/jenkins/vault-token"
+    avp.kubernetes.io/kv-version: "1"
+type: Opaque
+data:
+  token: <token>
