--- a/home_cluster/jenkins/configmap.yaml
+++ b/home_cluster/jenkins/configmap.yaml
@@ -75,7 +75,7 @@ data:
             managerPasswordSecret: "${LDAP_USER_PASS}"
             rootDN: "dc=geracorp,dc=local"
             server: "lldap-service.lldap.svc.cluster.local:3890"
-            userSearch: "(&(uid={0})(memberOf=cn=jenkins-users,ou=groups,dc=geracorp,dc=local))"
+            userSearch: "(&(uid={0})(|(memberOf=cn=jenkins-users,ou=groups,dc=geracorp,dc=local)(memberOf=cn=jenkins-admin,ou=groups,dc=geracorp,dc=local)))"
           disableMailAddressResolver: false
           disableRolePrefixing: true
           groupIdStrategy: "caseInsensitive"
