added lldap - lightweight authentication server, refactoring jenkins secret for lldap

--- a/home_cluster/jenkins/secrets.yaml
+++ b/home_cluster/jenkins/secrets.yaml
@@ -20,8 +20,8 @@ metadata:
     avp.kubernetes.io/kv-version: "1"
 type: Opaque
 stringData:
-  user: <user>
-  password: <password>
+  user: <bind_jenkins_user>
+  password: <bind_jenkins_password>
 ---
 apiVersion: v1
 kind: Secret
