fix local certificate for ingressroutes

--- a/home_cluster/lldap/deployment.yaml
+++ b/home_cluster/lldap/deployment.yaml
@@ -60,6 +60,7 @@ spec:
         - name: lldap-data
           persistentVolumeClaim:
             claimName: lldap-data
+        - name: lldap-credentials
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
