--- a/home_cluster/docker-registry/docker-registry.yaml
+++ b/home_cluster/docker-registry/docker-registry.yaml
@@ -196,7 +196,7 @@ spec:
     kind: ClusterIssuer
     name: letsencrypt-prod
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: docker-registry-tls
@@ -224,7 +224,7 @@ spec:
   tls:
     secretName: docker-registry-cert
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: docker-registry-local-tls
@@ -241,9 +241,9 @@ spec:
     - name: docker-registry
       port: 5000
   tls:
-    secretName: wildcard-home-local-crt
+    secretName: letsencrypt-cloud-production-tls
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: stripprefix
@@ -254,7 +254,7 @@ spec:
       - /ui
     forceSlash: false
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: ui-add-trailing-slash
@@ -264,7 +264,7 @@ spec:
     regex: ^.*/ui$
     replacement: /ui/
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: docker-registry-auth
