--- a/home_cluster/elastic/ingress-kibana.yaml
+++ b/home_cluster/elastic/ingress-kibana.yaml
@@ -1,4 +1,4 @@
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: kibana-ingress
@@ -13,4 +13,4 @@ spec:
     - name: kibana-kb-http
       port: 5601
   tls:
-    secretName: wildcard-home-local-crt
+    secretName: letsencrypt-cloud-production-tls
