--- a/home_cluster/jenkins/jenkins.yaml
+++ b/home_cluster/jenkins/jenkins.yaml
@@ -128,7 +128,7 @@ spec:
     app: jenkins
   type: ClusterIP
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: jenkins-local-tls
@@ -143,7 +143,7 @@ spec:
     - name: jenkins-http
       port: 8080
   tls:
-    secretName: wildcard-home-local-crt
+    secretName: letsencrypt-cloud-production-tls
 ---
 apiVersion: v1
 kind: Service
@@ -171,7 +171,7 @@ spec:
   selector:
     jenkins/label: jenkins-nomad-worker
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: jenkins-agent-packer
@@ -186,4 +186,4 @@ spec:
     - name: jk-agnt-packer
       port: 8336
   tls:
-    secretName: wildcard-home-local-crt
+    secretName: letsencrypt-cloud-production-tls
