--- a/home_cluster/lldap/service.yaml
+++ b/home_cluster/lldap/service.yaml
@@ -16,7 +16,7 @@ spec:
   selector:
     app: lldap
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: lldap-https
@@ -31,4 +31,4 @@ spec:
     - name: lldap-service
       port: 17170
   tls:
-    secretName: wildcard-home-local-crt
+    secretName: letsencrypt-cloud-production-tls
