--- a/home_cluster/nod32update/nod32update.yaml
+++ b/home_cluster/nod32update/nod32update.yaml
@@ -143,8 +143,12 @@ metadata:
   name: nod32update-secret
   namespace: tools
   annotations:
-    avp.kubernetes.io/path: "secret/tools/nod32update"
-    avp.kubernetes.io/kv-version: "1"
+    vault.security.banzaicloud.io/vault-addr: "https://vault.bank-vault:8200"
+    vault.security.banzaicloud.io/vault-role: "default"
+    vault.security.banzaicloud.io/vault-skip-verify: "true"
+    #vault.security.banzaicloud.io/vault-tls-secret: "vault-tls"
+    vault.security.banzaicloud.io/vault-agent: "false"
+    vault.security.banzaicloud.io/vault-path: "kubernetes"
 type: Opaque
-data:
-  users: <users>
+stringData:
+  users: ${vault:secret/data/nod32update#users}
