--- a/home_cluster/github2telegram/github2telegram.yaml
+++ b/home_cluster/github2telegram/github2telegram.yaml
@@ -47,7 +47,7 @@ spec:
       labels:
         app: github2telegram
       annotations:
-        vault.security.banzaicloud.io/vault-addr: "https://vault.bankvault:8200"
+        vault.security.banzaicloud.io/vault-addr: "https://vault.bank-vault:8200"
         vault.security.banzaicloud.io/vault-role: "default"
         vault.security.banzaicloud.io/vault-skip-verify: "true"
         #vault.security.banzaicloud.io/vault-tls-secret: "vault-tls"
