--- a/home_cluster/docker-registry/docker-registry.yaml
+++ b/home_cluster/docker-registry/docker-registry.yaml
@@ -273,14 +273,14 @@ spec:
   basicAuth:
     secret: docker-registry-secret
 ---
-apiVersion: v1
-kind: Secret
-metadata:
-  name: docker-registry-secret
-  namespace: tools
-  annotations:
-    avp.kubernetes.io/path: "secret/tools/docker_registry"
-    avp.kubernetes.io/kv-version: "1"
-type: Opaque
-stringData:
-  users: <users>
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: docker-registry-secret
+#   namespace: tools
+#   annotations:
+#     avp.kubernetes.io/path: "secret/tools/docker_registry"
+#     avp.kubernetes.io/kv-version: "1"
+# type: Opaque
+# stringData:
+#   users: <users>
