test new vault integration

--- a/home_cluster/jenkins/secrets.yaml
+++ b/home_cluster/jenkins/secrets.yaml
@@ -1,36 +1,36 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: docker-registry-geracorp-login
-  namespace: jenkins
-  annotations:
-    avp.kubernetes.io/path: "secret/tools/docker_registry"
-    avp.kubernetes.io/kv-version: "1"
-stringData:
-  .dockerconfigjson: <dockerconfigjson>
-type: kubernetes.io/dockerconfigjson
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: lldap-bind-cred
-  namespace: jenkins
-  annotations:
-    avp.kubernetes.io/path: "secret/tools/lldap"
-    avp.kubernetes.io/kv-version: "1"
-type: Opaque
-stringData:
-  user: <bind_jenkins_user>
-  password: <bind_jenkins_password>
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: vault-jenkins-token
-  namespace: jenkins
-  annotations:
-    avp.kubernetes.io/path: "secret/tools/jenkins/vault-token"
-    avp.kubernetes.io/kv-version: "1"
-type: Opaque
-data:
-  token: <token>
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: docker-registry-geracorp-login
+#   namespace: jenkins
+#   annotations:
+#     avp.kubernetes.io/path: "secret/tools/docker_registry"
+#     avp.kubernetes.io/kv-version: "1"
+# stringData:
+#   .dockerconfigjson: <dockerconfigjson>
+# type: kubernetes.io/dockerconfigjson
+# ---
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: lldap-bind-cred
+#   namespace: jenkins
+#   annotations:
+#     avp.kubernetes.io/path: "secret/tools/lldap"
+#     avp.kubernetes.io/kv-version: "1"
+# type: Opaque
+# stringData:
+#   user: <bind_jenkins_user>
+#   password: <bind_jenkins_password>
+# ---
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: vault-jenkins-token
+#   namespace: jenkins
+#   annotations:
+#     avp.kubernetes.io/path: "secret/tools/jenkins/vault-token"
+#     avp.kubernetes.io/kv-version: "1"
+# type: Opaque
+# data:
+#   token: <token>
