change local ingressroute to default wildcard certificate

--- a/home_cluster/elastic/ingress-kibana.yaml
+++ b/home_cluster/elastic/ingress-kibana.yaml
@@ -12,5 +12,4 @@ spec:
     services:
     - name: kibana-kb-http
       port: 5601
-  tls:
-    secretName: letsencrypt-cloud-production-tls
+  tls: {}
