--- a/home_cluster/influxDB/service.yaml
+++ b/home_cluster/influxDB/service.yaml
@@ -25,5 +25,4 @@ spec:
     services:
     - name: influxdb-service
       port: influxdb
-  tls:
-    secretName: letsencrypt-cloud-production-tls
+  tls: {}
