--- a/home_cluster/docker-registry/docker-registry.yaml
+++ b/home_cluster/docker-registry/docker-registry.yaml
@@ -240,8 +240,7 @@ spec:
     services:
     - name: docker-registry
       port: 5000
-  tls:
-    secretName: letsencrypt-cloud-production-tls
+  tls: {}
 ---
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
