--- a/home_cluster/jenkins/service.yaml
+++ b/home_cluster/jenkins/service.yaml
@@ -48,10 +48,11 @@ metadata:
   name: jk-agnt-packer
   namespace: jenkins
 spec:
+  type: NodePort
   ports:
     - port: 8336
       protocol: TCP
       targetPort: jenkins-agt-pk
+      nodePort: 30336
   selector:
     jenkins/label: jenkins-nomad-worker
-
