--- a/home_cluster/jenkins/jenkins.yaml
+++ b/home_cluster/jenkins/jenkins.yaml
@@ -13,6 +13,13 @@ spec:
     metadata:
       labels:
         app: jenkins
+      annotations:
+        vault.security.banzaicloud.io/vault-addr: "https://vault.bank-vault:8200"
+        vault.security.banzaicloud.io/vault-role: "default"
+        vault.security.banzaicloud.io/vault-skip-verify: "true"
+        #vault.security.banzaicloud.io/vault-tls-secret: "vault-tls"
+        vault.security.banzaicloud.io/vault-agent: "false"
+        vault.security.banzaicloud.io/vault-path: "kubernetes"
     spec:
       securityContext:
         fsGroup: 472
