--- a/home_cluster/helm_app/prometheus.yaml
+++ b/home_cluster/helm_app/prometheus.yaml
@@ -3,12 +3,20 @@ kind: Application
 metadata:
   name: prometheus
   namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io
 spec:
-  project: default
+  destination:
+    server: in-cluster
+    namespace: prometheus
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
     targetRevision: 60.0.0
     chart: kube-prometheus-stack
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: prometheus
+  project: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfheal: true
+    syncOptions:
+      - CreateNamespace=true
